--- a/src/components/my-flash/my-flash.css
+++ b/src/components/my-flash/my-flash.css
@@ -1,8 +1,9 @@
 .flash-container {
-
 	background-color: #000;
 	position: absolute;
 	top: 0;
+	text-align: center;
+	font-size: 16px;
 	width: 100%;
 	height: 56px;
 	color: #fff;
@@ -29,6 +30,19 @@
 	opacity: 0.5;
 }
 
+.time-bar-container {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 8px;
+}
+
+.time-bar {
+	height: 100%;
+	width: 100%;
+	background-color: #fff;
+}
+
 .primary {
 	background-color: #488aff;
 }
@@ -48,4 +62,3 @@
 .dark {
 	background-color: #222;
 }
-
